# chip8-emu

./: Cargo.toml  LICENSE  README.md  heaptrack.chip8.158475.zst  heaptrack.chip8.40813.zst
chip8/: Cargo.toml
chip8-core/: Cargo.toml
chip8-core/src/: bus.rs  chip8.rs  cpu.rs  display.rs  instructions.rs  keyboard.rs  lib.rs  memory.rs
chip8/src/: cli.rs  main.rs
src/: cpu.rs  display.rs  keyboard.rs  main.rs  memory.rs  system.rs
