[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chip8-core = { path = "../chip8-core" }
clap = { version = "4.0.29", features = ["derive"] }
egui = "0.19.0"
egui-macroquad = "0.12.0"
macroquad = "0.3.25"
